# observatorio-ipa

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.web  README.md  build_image.sh  db.docker-compose.yaml  docker-bake.hcl  docker-compose.yml  entrypoint.sh  example.docker-compose.yml  pyproject.toml  todo.txt  use.md
.github/: copilot-instructions.md
docs/: Makefile  conf.py  contribute.md  glossary.md  index.md  make.bat
notebooks/: auto_scripts.ipynb  copy_assets.ipynb  credentials_test.ipynb  db_testing.ipynb  export_task_mgmt.ipynb  general_flow.ipynb  image_export.ipynb  main_flow.ipynb  monthly_img_exports.ipynb  monthly_tbl_exports.ipynb  service_account_test.ipynb  stats_testing.ipynb  test_config.ipynb  trend_analysis.ipynb  yearly_export.ipynb
src/observatorio_ipa/: main.py
src/observatorio_ipa/core/: cli.py  config.py  dbschema.py  default.toml  defaults.py  healthcheck.py  scheduler.py  scripting.py  setup_db.py  web_replace.py
src/observatorio_ipa/core/templates/: base_job_template.html  job_template.html  job_template.txt
src/observatorio_ipa/core/workflows/: automation.py  monthly_export.py  wflows_connections.py  yearly_export.py
src/observatorio_ipa/core/workflows/automation/: common.py  images.py  jobs.py  orchestration.py  reporting.py  stats.py  website_update.py
src/observatorio_ipa/core/workflows/images/: monthly_export.py  yearly_export.py
src/observatorio_ipa/core/workflows/tables/: common.py  gdrive.py  manifest.py  monthly_exports.py  yearly_exports.py
src/observatorio_ipa/services/: connections.py  messaging.py
src/observatorio_ipa/services/database/: db.py
src/observatorio_ipa/services/gdrive/: assets.py
src/observatorio_ipa/services/gee/: assets.py  dates.py  exports.py
src/observatorio_ipa/services/gee/processes/: binary.py  merge.py  reclass_and_impute.py
src/observatorio_ipa/services/gee/processes/imputation/: spatial_4.py  spatial_8.py  temporal.py
src/observatorio_ipa/services/gee/processes/stats/: common.py  snowline.py  trend.py
src/observatorio_ipa/services/messaging/: email.py
src/observatorio_ipa/services/storage/: assets.py
src/observatorio_ipa/utils/: dates.py  db.py  logs.py  messaging.py
src/observatorio_ipa/web/: config.py  default_web.toml
src/observatorio_ipa/web/accounts/: admin.py  signals.py  urls.py  views.py
src/observatorio_ipa/web/accounts/migrations/: 0001_initial.py
src/observatorio_ipa/web/jobs/: admin.py  db_router.py  filters.py  models.py  tables.py  urls.py  views.py
src/observatorio_ipa/web/jobs/migrations/: 0001_initial.py
src/observatorio_ipa/web/jobs/templates/jobs/: export_detail.html  home.html  job_detail.html  job_list.html  running_jobs.html  (+1 more)
src/observatorio_ipa/web/static/css/: styles.css
src/observatorio_ipa/web/staticfiles/: staticfiles.json
src/observatorio_ipa/web/staticfiles/css/: base.dc8a7659969d.css.br
src/observatorio_ipa/web/templates/: _base.html  privacy.html
src/observatorio_ipa/web/templates/account/: login.html  logout.html  password_change.html  password_set.html
src/observatorio_ipa/web/templates/socialaccount/: authentication_error.html  connections.html  login.html  login_cancelled.html  signup.html
src/observatorio_ipa/web/webapp/: adapters.py  context_processors.py  settings.py  urls.py  views.py
tests/processes/: conftest.py  test_binary.py  test_monthly_export.py  test_monthly_export_proc.py
tests/utils/: test_command_line_args.py  test_scripting.py
(+27 files in other folders)
